--- a/src/App.css
+++ b/src/App.css
@@ -8,3 +8,36 @@
 .nav-item:hover {
   color: red;
 }
+
+.banner {
+  width: 100%;
+  height: 70vh;
+  background-position: center center;
+  background-size: cover;
+  display: flex;
+  align-items: center;
+  position: relative;
+}
+.banner::before {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 70vh;
+  content: '';
+  background: linear-gradient(to right, black, transparent);
+  opacity: 0.9;
+}
+
+.banner-info {
+  width: 800px;
+  margin-left: 20px;
+  z-index: 1;
+  color: antiquewhite;
+}
+.banner-info h1 {
+  font-size: 4em;
+}
+.banner-info p {
+  font-size: 1.2em;
+}
