--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -1,2 +1,8 @@
 @import './base/normalize';
 @import './base/reset';
+
+@import './pages/home';
+
+@import './components/navigation';
+@import './components/banner';
+@import './components/movie-card';
