--- a/src/style/components/_banner.scss
+++ b/src/style/components/_banner.scss
@@ -1,11 +1,12 @@
 .banner {
   width: 100%;
   height: 70vh;
+  display: flex;
   background-position: center center;
   background-size: cover;
-  display: flex;
   align-items: center;
   position: relative;
+  z-index: 10;
 }
 .banner::after {
   position: absolute;
